<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_login_layout_bg"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/user_account_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/phone_num"
        android:padding="8dp"
        android:textColor="@color/text_color_normal"
        android:textColorHint="@color/edit_hint_color"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/user_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/text_color_normal"
        android:textColorHint="@color/edit_hint_color"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_bg_purple"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/quick_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/quick_register"
            android:textColor="@color/text_color_purple" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="right"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/forget_password"
            android:textColor="@color/text_color_purple" />
    </RelativeLayout>

</LinearLayout>