<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/register_login_layout_bg" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/please_set_password" 
        android:textSize="18sp"
        android:textColor="@color/text_color_normal"/>
    
    <EditText 
        android:id="@+id/input_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/user_password"
        android:textColorHint="@color/edit_hint_color"
        android:background="@drawable/edit_text_bg"
        android:textColor="@color/text_color_normal"
        android:padding="8dp"
        />
    
    <Button
        android:id="@+id/register_over_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next_step" 
         android:textColor="@android:color/white"
        android:background="@drawable/btn_bg_purple"/>

</LinearLayout>
